started making basic layout of replica

--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Kast Replica</title>
 </head>
 <body>
-    
+<div class='background'>
+    <img class="logo" src="./assets/kast-logo-horizontal-color-white.svg" alt="none">
+    <nav id="menu">
+       <div class="menuItem"><a class="links" href="https://www.kastapp.co/about.html">About</a></div>
+       <div class="menuItem"><a class="links" href="https://kast.zendesk.com/hc/en-us/requests/new">Help</a></div>
+       <div class="menuItem"><a class="links" href="https://www.kastapp.co/community-guidelines.html">Community</a></div>
+       <div class="menuItem"><a class="links" href="https://www.kastapp.co/subscriptions.html">Premium</a></div>
+       <button id="menuButton">Open Kast</button>
+    </nav>
+</div> 
 </body>
 </html>
