--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Kast Replica</title>
 </head>
 <body>
-<div class='background'>
+<div>
     <img class="logo" src="./assets/kast-logo-horizontal-color-white.svg" alt="none">
     <nav id="menu">
        <div class="menuItem"><a class="links" href="https://www.kastapp.co/about.html">About</a></div>
@@ -18,5 +18,27 @@
        <button id="menuButton">Open Kast</button>
     </nav>
 </div> 
+<div class="laptopContainer">
+    <img class="laptopPic" src="./assets/laptop-large.png" alt="">
+    <h1>Watch parties made easy.</h1>
+    <p>Watch <b>whatever you want</b> with friends online: movies, TV shows, you name it. Share your screen and camera or launch content directly from Kast TV in your watch parties. Join millions of kasters today!</p>
+    <button class="kastButton"><a type="submit" class="kastButton" href="https://w.kast.live/">OPEN KAST</a></button>
+</div>
+<div class="bottomContainer">
+    <h3>Featured In</h3>
+        <div id="featureImages">
+            <img src="./assets/wired-logo.svg" alt="">
+            <img src="./assets/nerdist-logo.svg" alt="">
+            <img src="./assets/yahoo-finance-logo.svg" alt="">
+            <img src="./assets/evening-standard-logo.svg" alt="">
+            <img src="./assets/bbc-logo.svg" alt="">
+            <img src="./assets/daily-mail-logo.svg" alt="">
+        </div>
+        <p><i>"Kast has probably never been more relevant - or necessary - than it is right now."</i></p>
+</div>
+<div class="secondBottomContainer">
+    <h1>What is Kast?</h1>
+    <p>Looking for a place to watch movies, play, and hang out with friends? Hop onto Kast and start sharing experiences real-time!</p>
+</div>
 </body>
 </html>
